# fast-stats

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  pytest.ini  test.ipynb
.github/workflows/: CI.yml  builds.yml  docs.yml  tests.yml
benchmarks/: threading_example.ipynb  timeit.ipynb
docs/: index.md
examples/: benchmarks.ipynb  iter_benchmarks.ipynb  stats.ipynb  threading.ipynb
fast_stats/: __init__.py  _fast_stats_ext.pyi  binary.py  confusion_matrix.py  exceptions.py  iou.py  multiclass.py  stats.py
src/: binary.rs  cm.rs  dispatch.rs  lib.rs  multiclass.rs  quant.rs  utils.rs
tests/: test_binary.py  test_cm.py  test_iou.py  test_multiclass.py  test_stats.py
