[project]
name = "fast-stats"
version = "0.0.1"
description = "A fast simple library for calculating basic statistics"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["numpy", "stats", "rust", "fast"]
authors = [{name = "zachcoleman", email = "zacharywcoleman@gmail.com"}]
maintainers = [{name = "zachcoleman", email = "zacharywcoleman@gmail.com"}]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
test = [
#   "pytest",
#   "pytest-cov[all]"
]

[project.urls]
repository = "https://github.com/zachcoleman/fast-stats"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

