[project]
name = "fast-stats"
version = "1.2.1"
description = "A fast and simple library for calculating basic statistics"
readme = "README.md"
license = {text="Apache 2.0"}
keywords = ["numpy", "stats", "rust", "fast"]
authors = [
  {email = "zacharywcoleman@gmail.com"},
  {name = "Zach Coleman"}
]
homepage = "https://github.com/zachcoleman/fast-stats"
repository = "https://github.com/zachcoleman/fast-stats"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
  "numpy",
]

[project.urls]
repository = "https://github.com/zachcoleman/fast-stats"

[project.optional-dependencies]
dev = [
  "dictdiffer",
  "pre-commit",
  "pytest",
  "pytest-cov[all]"
]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
strip = true

[tool.isort]
profile="black"

[tool.bandit]
exclude_dirs=["tests"]
